src/objects/AB2__AdBookIndependentDrop__c.object
<CustomObject>
    <description>An AdBook Drop that is independent of OpportunityLineItem records.</description>
    <fields>
        <fullName>AB2__ABBillingCategory__c</fullName>
        <description>Billing Category - Paid For / Value Add / Make Good / Remnant
A.K.A AB Pay Type</description>
        <inlineHelpText>AdBook Billing Category</inlineHelpText>
        <label>AB Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AB2__AB_Billing_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABBillingModel__c</fullName>
        <description>The AdBook Drop Billing Model</description>
        <inlineHelpText>The AdBook Drop Billing Model</inlineHelpText>
        <label>AB Billing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AB2__ABBillingModel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABDropCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AB Drop Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropGoals__c</fullName>
        <description>The Goal count for a Drop.</description>
        <inlineHelpText>The Goal count for a Drop.</inlineHelpText>
        <label>AB Drop Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropID__c</fullName>
        <description>The AdBook Drop ID</description>
        <externalId>true</externalId>
        <inlineHelpText>The AdBook Drop ID</inlineHelpText>
        <label>AB DropID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__ABDropNotes__c</fullName>
        <description>AdBook Drop Notes</description>
        <inlineHelpText>AdBook Drop Notes</inlineHelpText>
        <label>AB Drop Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropPrice__c</fullName>
        <description>AdBook Drop Price from last refresh operation</description>
        <inlineHelpText>AdBook Drop Price from last refresh operation</inlineHelpText>
        <label>AB Drop Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABEndDate__c</fullName>
        <description>The AdBook End Date</description>
        <inlineHelpText>Enter the End Date of the drop here.</inlineHelpText>
        <label>AB End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementID__c</fullName>
        <description>The AdBook Media Element ID</description>
        <formula>VALUE(AB2__ABMediaElement__r.AB2__MediaElementID__c)</formula>
        <inlineHelpText>The AdBook Media Element ID</inlineHelpText>
        <label>AB MediaElementID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementPath__c</fullName>
        <formula>AB2__ABMediaElement__r.AB2__MediaElementName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB MediaElement Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The AdBook Media Element associated with the Drop</description>
        <inlineHelpText>The AdBook Media Element associated with the Drop</inlineHelpText>
        <label>AB MediaElement</label>
        <referenceTo>AB2__MediaElement__c</referenceTo>
        <relationshipName>AdBookDrops</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABPriceTypeRecord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The AdBook Price Type. Determines the AB Price Calculation Type.</description>
        <inlineHelpText>The AdBook Price Type. Determines the AB Price Calculation Type.</inlineHelpText>
        <label>AB Price Type Record</label>
        <referenceTo>AB2__AdBookPriceType__c</referenceTo>
        <relationshipName>AdBookIndependentDrops</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABStartDate__c</fullName>
        <description>The AdBook Drop Start Date</description>
        <inlineHelpText>Enter the Start Date of the drop here.</inlineHelpText>
        <label>AB Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABSynchronizationIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the event of a synchronization issue creating this drop in AdBook this record will be prevented from further sync operations until linked to the correct record.</description>
        <inlineHelpText>In the event of a synchronization issue creating this drop in AdBook this record will be prevented from further sync operations until linked to the correct record.</inlineHelpText>
        <label>AB Synchronization Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABWorkingPrice__c</fullName>
        <description>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field. 
For orders with PriceType of CPM this will be the price per 1000 impressions. 
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</description>
        <inlineHelpText>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field. 
For orders with PriceType of CPM this will be the price per 1000 impressions. 
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</inlineHelpText>
        <label>AB Working Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AB2__Opportunity__c</fullName>
        <description>Parent Opportunity Record</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AdBookDrops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AdBook Line Item</label>
    <nameField>
        <label>AdBookIndependentDrop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>